<resources>
    <string name="app_name">LScinema</string>
    <string name="nav_home">Đặt vé</string>
    <string name="nav_news">Tin tức</string>
    <string name="nav_contact">Liên hệ</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_profile">Thông tin</string>
    <string name="nav_change_pass">Đổi mật khẩu</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="nav_drawer_open">Open drawer</string>
    <string name="nav_drawer_close">Close drawer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>